fix(migration): resolve conflicts
