# src/api-docs/medication.swagger.yaml
@@ -59,23 +59,29 @@ components:
         - ML
         - DROPS
         - UNITS
-
-    MedicationTime:
+    MedicationSchedule:
       type: object
-      required:
-        - time
-        - period
 
       properties:
-        time:
+        MORNING:
           type: string
-          example: "08:00"
+          example: "09:00:00"
 
-        period:
+        NOON:
           type: string
-          enum:
-            - AM
-            - PM
+          example: "13:00:00"
+
+        NIGHT:
+          type: string
+          example: "22:00:00"
+
+        CUSTOM:
+          type: string
+          example: "16:30:00"
+
+      example:
+        MORNING: "09:00:00"
+        NIGHT: "22:00:00"
 
     Medication:
       type: object
@@ -116,17 +122,8 @@ components:
         frequency:
           $ref: "#/components/schemas/FrequencyType"
 
-        medicationTime:
-          type: array
-
-          items:
-            $ref: "#/components/schemas/MedicationTime"
-
-        bestTaken:
-          type: array
-
-          items:
-            $ref: "#/components/schemas/BestTakenType"
+        medicationSchedule:
+          $ref: "#/components/schemas/MedicationSchedule"
 
         foodFrequency:
           $ref: "#/components/schemas/FoodType"
@@ -158,27 +155,10 @@ components:
           default: 0
           example: 25
 
-        doseReminders:
-          type: boolean
-          default: false
-
-        unit:
-          $ref: "#/components/schemas/MedicationUnit"
-
         reminderBeforeMinutes:
           type: integer
           default: 5
           example: 10
-
-        dailyConsumption:
-          type: integer
-          minimum: 0
-          default: 0
-          example: 2
-
-        refillAlert:
-          type: boolean
-          default: false
 
         notes:
           type: string
@@ -206,7 +186,8 @@ components:
         - medicationType
         - frequency
         - startDate
-        - unit
+        - medicationSchedule
+        - foodFrequency
 
       properties:
         medicationName:
@@ -231,27 +212,8 @@ components:
         frequency:
           $ref: "#/components/schemas/FrequencyType"
 
-        medicationTime:
-          type: array
-
-          items:
-            $ref: "#/components/schemas/MedicationTime"
-
-          example:
-            - time: "08:00"
-              period: AM
-            - time: "08:00"
-              period: PM
-
-        bestTaken:
-          type: array
-
-          items:
-            $ref: "#/components/schemas/BestTakenType"
-
-          example:
-            - MORNING
-            - NIGHT
+        medicationSchedule:
+          $ref: "#/components/schemas/MedicationSchedule"
 
         foodFrequency:
           $ref: "#/components/schemas/FoodType"
@@ -272,23 +234,10 @@ components:
           default: 0
           example: 30
 
-        doseReminders:
-          type: boolean
-          default: false
-          example: true
-
-        unit:
-          $ref: "#/components/schemas/MedicationUnit"
-
         reminderBeforeMinutes:
           type: integer
           default: 5
           example: 10
-
-        refillAlert:
-          type: boolean
-          default: false
-          example: true
 
         notes:
           type: string
@@ -319,17 +268,8 @@ components:
         frequency:
           $ref: "#/components/schemas/FrequencyType"
 
-        medicationTime:
-          type: array
-
-          items:
-            $ref: "#/components/schemas/MedicationTime"
-
-        bestTaken:
-          type: array
-
-          items:
-            $ref: "#/components/schemas/BestTakenType"
+        medicationSchedule:
+          $ref: "#/components/schemas/MedicationSchedule"
 
         foodFrequency:
           $ref: "#/components/schemas/FoodType"
@@ -346,24 +286,27 @@ components:
           type: integer
           minimum: 0
 
-        doseReminders:
-          type: boolean
-
         reminderBeforeMinutes:
           type: integer
           default: 5
           example: 10
 
-        unit:
-          $ref: "#/components/schemas/MedicationUnit"
-
-        refillAlert:
-          type: boolean
-
         notes:
           type: string
           nullable: true
           maxLength: 1000
+
+    RefillMedicationRequest:
+      type: object
+      required:
+        - quantity
+
+      properties:
+        quantity:
+          type: integer
+          minimum: 1
+          example: 10
+          description: Quantity being added during refill
 
     MedicationFilter:
       type: object
@@ -376,9 +319,6 @@ components:
           $ref: "#/components/schemas/FrequencyType"
 
         ongoing:
-          type: boolean
-
-        refillAlert:
           type: boolean
 
         search:
@@ -550,6 +490,45 @@ paths:
       responses:
         "200":
           description: Medication deleted successfully
+
+        "401":
+          description: Unauthorized
+
+        "404":
+          description: Medication not found
+
+  /medications/refill/{id}:
+    post:
+      tags:
+        - Medication
+
+      summary: Refill medication quantity
+
+      description: >
+        Adds new quantity to an existing medication,
+      security:
+        - bearerAuth: []
+
+      parameters:
+        - $ref: "#/components/parameters/UuidParam"
+
+      requestBody:
+        required: true
+
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RefillMedicationRequest"
+
+            example:
+              quantity: 10
+
+      responses:
+        "200":
+          description: Medication refilled successfully
+
+        "400":
+          description: Invalid quantity
 
         "401":
           description: Unauthorized
