# src/routes/medicationRoutes.js
@@ -1,7 +1,6 @@
 const express = require("express");
 const medicationController = require("../controllers/medicationController");
 const { verifyToken } = require("../middlewares/authMiddleware");
-
 const router = express.Router();
 
 //create
@@ -16,10 +15,12 @@ router.post("/list-paginated", verifyToken, medicationController.listMedications
 //filter list
 router.post("/list", verifyToken, medicationController.listMedications);
 
+// refill medication
+router.post("/refill/:id", verifyToken, medicationController.refillMedication);
 //get by id
 router.get("/:id", verifyToken, medicationController.getMedicationById);
 
-//updated user
+//updated
 router.put("/:id", verifyToken, medicationController.updateMedication);
 
 //delted user
